# mcp-app

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
capabilities/tools/: __init__.py  calculates.py  rag.py  websearch.py
modules/: __init__.py  constants.py
modules/rag/: __init__.py  retrieve.py  vectorcache.py
tests/: test.py
