[project]
name = "mcp-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "openai>=1.70.0",
    "pgvector>=0.4.0",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
